<resources>
    <string name="app_name">Patient Tracking and Patient History</string>
    <string name="hospital_name">Patient Tracking</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="agreement">"Terms and conditions
These terms and conditions ("Terms", "Agreement") are an agreement between Mobile Application Developer ("Mobile Application Developer", "us", "we" or "our") and you ("User", "you" or "your"). This Agreement sets forth the general terms and conditions of your use of the Patient Tracker mobile application and any of its products or services (collectively, "Mobile Application" or "Services").

Accounts and membership
You must be at least 24 years of age to use this Mobile Application. By using this Mobile Application and by agreeing to this Agreement you warrant and represent that you are at least 18 years of age. If you create an account in the Mobile Application, you are responsible for maintaining the security of your account and you are fully responsible for all activities that occur under the account and any other actions taken in connection with it. We may monitor and review new accounts before you may sign in and use our Services. Providing false contact information of any kind may result in the termination of your account. You must immediately notify us of any unauthorized uses of your account or any other breaches of security. We will not be liable for any acts or omissions by you, including any damages of any kind incurred as a result of such acts or omissions.

User content
We do not own any data, information or material ("Content") that you submit in the Mobile Application in the course of using the Service. You shall have sole responsibility for the accuracy, quality, integrity, legality, reliability, appropriateness, and intellectual property ownership or right to use of all submitted Content. We may monitor and review Content in the Mobile Application submitted or created using our Services by you. Unless specifically permitted by you, your use of the Mobile Application does not grant us the license to use, reproduce, adapt, modify, publish or distribute the Content created by you or stored in your user account for commercial, marketing or any similar purpose. But you grant us permission to access, copy, distribute, store, transmit, reformat, display and perform the Content of your user account solely as required for the purpose of providing the Services to you.

Backups
We perform regular backups of the Content and will do our best to ensure completeness and accuracy of these backups. In the event of the hardware failure or data loss we will restore backups automatically to minimize the impact and downtime.

Links to other mobile applications
Although this Mobile Application may link to other mobile applications, we are not, directly or indirectly, implying any approval, association, sponsorship, endorsement, or affiliation with any linked mobile application, unless specifically stated herein. We are not responsible for examining or evaluating, and we do not warrant the offerings of, any businesses or individuals or the content of their mobile applications. We do not assume any responsibility or liability for the actions, products, services, and content of any other third-parties. You should carefully review the legal statements and other conditions of use of any mobile application which you access through a link from this Mobile Application. Your linking to any other off-site mobile applications is at your own risk.

Changes and amendments
We reserve the right to modify this Agreement or its policies relating to the Mobile Application or Services at any time, effective upon posting of an updated version of this Agreement in the Mobile Application. When we do, we will revise the updated date at the bottom of this page. Continued use of the Mobile Application after any such changes shall constitute your consent to such changes. Policy was created with WebsitePolicies.

Acceptance of these terms
You acknowledge that you have read this Agreement and agree to all its terms and conditions. By using the Mobile Application or its Services you agree to be bound by this Agreement. If you do not agree to abide by the terms of this Agreement, you are not authorized to use or access the Mobile Application and its Services.

Contacting us
If you would like to contact us to understand more about this Agreement or wish to contact us concerning any matter relating to it, you may send an email to patienttrackerapp@gmail.com

This document was last updated on May 3, 2020"</string>
    <string name="agree">Agree</string>
    <string name="disagree">Don\'t agree</string>
    <string name="firstName">Firstname</string>
    <string name="lastName">Lastname</string>
    <string name="age">Age</string>
    <string name="bloodGroup">Blood group</string>
    <string name="degree">Degree</string>
    <string name="phoneNumber">Phone number</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender:</string>
    <string name="experience">Please enter your experience</string>
    <string name="finish">Finish</string>
    <string name="doctor_name">Doctor name</string>
    <string name="menu_patients_list">Patients List</string>
    <string name="menu_patients_feedback">Patients Feedback</string>
    <string name="menu_hospital_recommendations">Hospital Recommendations</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_patient">Add Patient</string>
    <string name="personal_details">Personal details</string>
    <string name="birthDate">Date of birth</string>
    <string name="emergencyPhone">Emergency Contact Number</string>
    <string name="admissionDate">Admission Date</string>
    <string name="save_patient">Save Patient</string>
    <string name="bilogical_details">Biological details</string>
    <string name="bloodPressureText">Blood pressure</string>
    <string name="diabate">Diabate type</string>
    <string name="diabeteText">Diabetes type</string>
    <string name="diabetesText">Diabetes type</string>
    <string name="allergiesText">Allergies</string>
    <string name="hereditaryText">Hereditary diseases</string>
    <string name="hereditaryYesText">Mention if yes</string>
    <string name="currentMedicationText">Current medication</string>
    <string name="uploadPatientPicture">Upload patient picture</string>
    <string name="physicalDetailsText">Physical details</string>
    <string name="oldSurgeriesText">Old surgeries</string>
    <string name="brokenBonesText">Broken bones</string>
    <string name="patientNoteText">Patient note</string>
    <string name="no_patients">No patients on your list</string>
    <string name="appointment">Physical therapy appointment</string>
    <string name="pickTime">Pick time</string>
    <string name="pickDate">Pick date</string>
    <string name="forgot_password">Forgot password</string>
    <string name="menu_cured_patients">Cured patients</string>
    <string name="menu_feedback">Feedback</string>
    <string name="fullname">Your fullname</string>
    <string name="feedback_text">Your feedback</string>
    <string name="send_feedback">Send feedback</string>
    <string name="edit_patient">Edit patient</string>
</resources>
