<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?android:windowBackground"
    tools:context=".ui.patient_add.PatientAddFragment">

    <TextView
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:gravity="center"
        android:background="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/add_patient"
        android:textColor="@color/white"
        android:elevation="4dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:text="@string/personal_details"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:clickable="true"
                    android:id="@+id/birthDateFieldLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birthDate">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birthDateField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:focusable="false"
                        android:clickable="true"
                        android:cursorVisible="false"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phoneNumber">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emergencyPhoneField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emergencyPhone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:clickable="true"
                    android:id="@+id/admissionDateFieldLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/admissionDate">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/admissionDateField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:focusable="false"
                        android:clickable="true"
                        android:cursorVisible="false"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addressField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPostalAddress"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_gravity="end"
                    app:iconGravity="end"
                    app:icon="@drawable/ic_account_circle_black_24dp"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:id="@+id/photoUploadBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uploadPatientPicture"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"
                        android:text="@string/gender"
                        android:fontFamily="serif"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:gravity="center"/>

                    <RadioGroup
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="wrap_content"
                        android:checkedButton="@+id/male"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"/>
                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"/>
                    </RadioGroup>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:paddingBottom="6dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:text="@string/bilogical_details"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bloodGroup"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/bloodGroupField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/bloodPressureField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bloodPressureText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/diabetesText"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/diabetesTypeField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/allergiesText"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/allergiesField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hereditaryText"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/hereditaryField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/hereditaryYesField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hereditaryYesText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/currentMedicationField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/currentMedicationText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:paddingBottom="6dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:text="@string/physicalDetailsText"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/oldSurgeriesField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/oldSurgeriesText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/brokenBonesField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/brokenBonesText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/patientNoteField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/patientNoteText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="5"
                        android:gravity="top|left"
                        android:inputType="text"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/appointment"
                        android:fontFamily="serif"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <Button
                        android:layout_gravity="end"
                        style="@style/Widget.MaterialComponents.Button.Icon"
                        android:id="@+id/pickDate"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:text="@string/pickDate"
                        />

                    <Button
                        android:layout_gravity="end"
                        style="@style/Widget.MaterialComponents.Button.Icon"
                        android:id="@+id/pickTime"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:text="@string/pickTime"
                        />

                </LinearLayout>

                <Button
                    android:layout_gravity="end"
                    app:iconGravity="end"
                    app:icon="@drawable/ic_save_24dp"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:id="@+id/saveBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_patient"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>